# MeshCoreGRPCGateway

./: .justfile  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yaml  pr.yaml
meshcore-grpc-gateway/cli/: build.rs
meshcore-grpc-gateway/cli/src/: main.rs
meshcore-grpc-gateway/env/: Cargo.toml
meshcore-grpc-gateway/env/src/: lib.rs
meshcore-grpc-gateway/server/: build.rs
meshcore-grpc-gateway/server/src/: main.rs  server.rs
meshcore-grpc-gateway/server/src/server/: message.rs
meshhat-controller/: Cargo.toml
meshhat-controller/cli/: Cargo.toml  build.rs
meshhat-controller/cli/src/: main.rs
meshhat-controller/env/: Cargo.toml
meshhat-controller/env/src/: lib.rs
meshhat-controller/server/: Cargo.toml  build.rs
meshhat-controller/server/src/: app_env.rs  main.rs  server.rs
meshhat-controller/server/src/server/: contact.rs  get_name.rs  message.rs  reset.rs
proto/: meshcore.proto
snap/: snapcraft.yaml
src/: app_env.rs  main.rs  server.rs
src/server/: healthcheck.rs  message.rs
