[package]
name = "MeshHatController"
version = "0.1.0"
edition = "2024"

[dependencies]
meshcore-rs        = "0.1"
tonic              = { version = "0.11", features = ["transport"] }
prost              = "0.12"
tokio              = { version = "1", features = ["full"] }
hex                = "0.4"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11"
